# corpus-informaticus

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/file_roundtrip/: ci3_to_file.py  file_to_ci3.py  sample.restored.txt  sample.txt.ci3
examples/hello_corpus/: decode_hello.py  encode_hello.py  hello.ci3  view_slice.py
examples/v02/: decode_v02.py  encode_v02.py  hello_v02.ci3  view_slice.py
examples/v03/: civd_to_file_v03.py  file_to_civd_v03.py
examples/v04/: cli_v04.py  preview.py  robot_loader.py  unpack.py
examples/v05/: meta_example.json
examples/v06/: roi_demo.py
examples/v07/: metadata_dump.py  snapshot_demo.py  streaming_demo.py  tile_pack_demo.py  tiler_demo.py
examples/v08/: snapshot_v08_demo.py  tile_pack_v08_demo.py
specs/: ci-v0.1-spec.md  ci-v0.2-spec.md  civd-capacity-and-sizes.md  civd-scaling-tiling-v0.7.md  civd-v0.3-channel-semantics.md  civd-v0.3-dynamic-dims.md  civd-v0.3-encoding.md  civd-v0.4-file-table.md  civd-v0.5-adaptive-geometry.md  civd-v0.6-roi.md
src/corpus_informaticus/: __init__.py  ci3_codec.py  ci3_inspect.py  ci3_types.py  ci3_view.py  ci3_visualizer.py  civd_api_v04.py  civd_v04_codec.py  civd_v05_codec.py  civd_view_v03.py  cli_v04.py  codec_v03.py  filetable_v04.py  roi_v06.py  snapshot_v07.py  snapshot_v08.py  tile_header_v08.py  tile_manifest_v07.py  tile_pack_v07.py  tile_pack_v08.py  tiler_v07.py
tests/: test_roi_v06.py  test_snapshot_v08.py  test_tile_header_v08.py  test_tile_pack_v07.py  test_tiling_v07.py
