[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-informaticus"
version = "0.0.1"
description = "Volumetric data capsules and tools for AI, robotics, and spatial systems (CIVD)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
